Using services instead of putting intelligence in controllers